# ros-omnibase

./: .gitignore
ESP32/: README.md  platformio.ini
ESP32/log/: 1m_lurus_on_off.txt  1m_non_control_.txt  1m_non_control_revisi.txt  maju_1m_pid_rig.txt  maju_2m_pid_rig.txt  maju_3m_pid_rig.txt
ESP32/src/: main.cpp  main.h  ota.h  ros_setup.h  wifi_setup.h
catkin_ws/: taskkill.bat
catkin_ws/src/omnibot/: CMakeLists.txt  setup.py
catkin_ws/src/omnibot/config/: view.rviz
catkin_ws/src/omnibot/launch/: real.launch  robot.launch  rviz.launch  simulation.launch
catkin_ws/src/omnibot/nodes/: node_autonomous.py  node_imu.py  node_odometry.py  node_play.py  node_robot_mock.py  node_teleop.py  teleop.py
catkin_ws/src/omnibot/src/omnibot/: kinematics.py  odometry.py  pid.py
catkin_ws/src/omnibot/urdf/: robot.xacro
catkin_ws/src/openbase/: CMakeLists.txt  README.md  package.xml  setup.py
desktop/: .gitignore  requirements.txt  setup.py
desktop/desktop/: main.py
desktop/desktop/ui/: __init__.py  graph_window.py  main_window.py  main_window.ui  mainwindow.ui
desktop/result/: catatan_error_internal_en.txt  eksternal_0x_-1y_pid.txt  eksternal_0x_0y_pid.txt  eksternal_1m_non_kendali.txt  eksternal_1m_on_off.txt  eksternal_1m_pid.txt  eksternal_1x_-1y_pid.txt  internal_-1x_-1y_pid.txt  internal_0x_-1y_pid.txt  internal_0x_0y_pid.txt
src/omnibot/: CMakeLists.txt  package.xml
src/omnibot/config/: view.rviz
src/omnibot/launch/: robot.launch
src/omnibot/msg/: MotorEncoder.msg  MotorSpeed.msg
src/omnibot/nodes/: node_odom.py  node_odometry  node_odometry.py  (+1 more)
(+43 files in other folders)
